tests/invalid/use_missing_std_module.wio
use std::missing_std_module as missing;

fn Entry(args: string[]) -> i32 {
    return 0;
}
